welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
if ( (a<=19 && a>=13) || (b<=19 && b>=13) || ) {
                                          ^